fix the fov mismatching

--- a/1.pre_process_data/notebooks/0.fix_pathing.ipynb
+++ b/1.pre_process_data/notebooks/0.fix_pathing.ipynb
@@ -34,10 +34,8 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small'),\n",
-       " PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP'),\n",
-       " PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_6hr_4ch_MaxIP'),\n",
-       " PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_6hr_4ch_MaxIP_test_small')]"
+       "[PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_6hr_4ch_MaxIP'),\n",
+       " PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP')]"
       ]
      },
      "execution_count": 3,
@@ -65,21 +63,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_test_small'),\n",
-       " PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP'),\n",
-       " PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_6hr_4ch_MaxIP'),\n",
-       " PosixPath('/home/lippincm/Documents/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_6hr_4ch_MaxIP_test_small')]"
+       "[PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_6hr_4ch_MaxIP'),\n",
+       " PosixPath('/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/data/raw_data/20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP')]"
       ]
      },
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
