--- a/6.process_CP_features/notebooks/0.merge_sc.ipynb
+++ b/6.process_CP_features/notebooks/0.merge_sc.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
     "    well_fov = args.well_fov\n",
     "else:\n",
     "    print(\"Running in a notebook\")\n",
-    "    well_fov = \"E-03_F0002\""
+    "    well_fov = \"E-05_F0001\""
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,18 +245,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Performing merge single cells and conversion on 20231017ChromaLive_6hr_4ch_MaxIP!\n",
+      "Source path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.cellprofiler_analysis/analysis_output/timelapse/E-05_F0001/timelapse_4ch_analysis.sqlite\n",
+      "Destination path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/6.process_CP_features/data/0.converted_data/timelapse/E-05_F0001.parquet\n",
+      "Error in merging and converting 20231017ChromaLive_6hr_4ch_MaxIP!\n",
+      "Probably due to no objects recorded in the sqlite file\n",
+      "An existing file or directory was provided as dest_path: '/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/6.process_CP_features/data/0.converted_data/timelapse/E-05_F0001.parquet'. Please use a new path for this parameter.\n",
       "Performing merge single cells and conversion on 20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP!\n",
-      "Source path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/4.cellprofiler_analysis/analysis_output/endpoint/E-03_F0002/timelapse_2ch_analysis.sqlite\n",
-      "Destination path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.process_CP_features/data/0.converted_data/endpoint/E-03_F0002.parquet\n",
+      "Source path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.cellprofiler_analysis/analysis_output/endpoint/E-05_F0001/timelapse_2ch_analysis.sqlite\n",
+      "Destination path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/6.process_CP_features/data/0.converted_data/endpoint/E-05_F0001.parquet\n",
       "Error in merging and converting 20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP!\n",
       "Probably due to no objects recorded in the sqlite file\n",
-      "An existing file or directory was provided as dest_path: '/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.process_CP_features/data/0.converted_data/endpoint/E-03_F0002.parquet'. Please use a new path for this parameter.\n",
+      "list index out of range\n",
       "Performing merge single cells and conversion on 20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_whole_image!\n",
-      "Source path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/4.cellprofiler_analysis/analysis_output/endpoint/E-03_F0002/timelapse_2ch_analysis.sqlite\n",
-      "Destination path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.process_CP_features/data/0.converted_data/endpoint/E-03_F0002_whole_image.parquet\n",
+      "Source path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.cellprofiler_analysis/analysis_output/endpoint/E-05_F0001/timelapse_2ch_analysis.sqlite\n",
+      "Destination path: /home/lippincm/4TB_A/live_cell_timelapse_apoptosis/6.process_CP_features/data/0.converted_data/endpoint/E-05_F0001_whole_image.parquet\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing previously loaded Parsl configuration.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Error in merging and converting 20231017ChromaLive_endpoint_w_AnnexinV_2ch_MaxIP_whole_image!\n",
       "Probably due to no objects recorded in the sqlite file\n",
-      "An existing file or directory was provided as dest_path: '/home/lippincm/4TB_A/live_cell_timelapse_apoptosis/5.process_CP_features/data/0.converted_data/endpoint/E-03_F0002_whole_image.parquet'. Please use a new path for this parameter.\n"
+      "list index out of range\n"
      ]
     }
    ],
