add the new platemap

--- a/9.platemap/notebooks/make_platemap.ipynb
+++ b/9.platemap/notebooks/make_platemap.ipynb
@@ -290,19 +290,8 @@
     ")\n",
     "platemap\n",
     "# save plot\n",
-    "ggsave(figure_file, platemap, width = 10, height = 10, units = \"in\")"
+    "ggsave(figure_file, platemap, width = width, height = height, units = \"in\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
