--- a/4.cellprofiler_analysis/notebooks/2.copy_cell_mask_over.ipynb
+++ b/4.cellprofiler_analysis/notebooks/2.copy_cell_mask_over.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebooks copies over the cell mask files from the CellProfiler output directory to the main data directory for easier access during analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
